fix: make max and min labels visible for variable form number input

--- a/src/assets/styles/player.scss
+++ b/src/assets/styles/player.scss
@@ -1282,7 +1282,6 @@ $start-button-size: 15vw;
   }
 
   span {
-    color: $romper-background-color;
     font-size: 75%;
     line-height: 2.5vw;
     margin-bottom: -1vw;
